# sensyn_dji_gimbal_action-ros

./: .pre-commit-config.yaml  .secrets.baseline.json  CMakeLists.txt  README.md  package.xml
.github/workflows/: detect-secrets.yml
action/: CameraParam.action  ControlGimbal.action  GimbalCamera.action  ResetGimbal.action  ShootCamera.action
include/: action_type_definition.h  dji_gimbal_camera_action_client.h
include/sensyn_dji_gimbal_action/: action_type_definition.h  dji_gimbal_camera_action_client.h
launch/: action_server.launch  dummy_gimbal_test.launch
scripts/: dummy_gimbal_node.py
src/: dji_camera_action_server.cpp  dji_camera_param_action_server.cpp  dji_gimbal_action_server.cpp  dji_gimbal_camera_action_client.cpp  dji_gimbal_camera_action_server.cpp
test/: test_gimbal.test  test_gimbal_client.cpp  test_gimbal_server.py
